SERVER-52975 Fix use of 'onRollback' callback for collection validator options in 'collection_impl.cpp'

(cherry picked from commit 459e61631a0f806962fe481aed80363d2d438a04)