jstests/core/doc_validation_encrypt_keywords.js
@@ -7,8 +7,8 @@
 (function() {
 "use strict";
 
-var collName = "doc_validation_encrypt_keywords";
-var coll = db[collName];
+const collName = "doc_validation_encrypt_keywords";
+const coll = db[collName];
 coll.drop();
 
 const encryptSchema = {
@@ -20,6 +20,29 @@ const nestedEncryptSchema = {
 const encryptMetadataSchema = {
     $jsonSchema: {encryptMetadata: {algorithm: "AEAD_AES_256_CBC_HMAC_SHA_512-Deterministic"}}
 };
+
+/**
+ * Verify that the validator's in-memory state matches its on-disk state.
+ */
+function validateCollectionOptions() {
+    function verifyValidateSuccess(output) {
+        assert(output.hasOwnProperty("errors"), output);
+        assert.eq(0, output["errors"].length, output);
+        assert(output.hasOwnProperty("valid"), output);
+        assert.eq(true, output["valid"], output);
+    }
+
+    const validateResult = assert.commandWorked(coll.validate({full: true}));
+
+    if (validateResult.hasOwnProperty("raw")) {
+        const rawOutput = validateResult["raw"];
+        for (const key of Object.keys(rawOutput)) {
+            verifyValidateSuccess(rawOutput[key]);
+        }
+    } else {
+        verifyValidateSuccess(validateResult);
+    }
+}
 
 assert.commandFailedWithCode(
     db.createCollection(collName, {validator: encryptSchema, validationAction: "warn"}),
@@ -48,10 +71,13 @@ assert.commandWorked(db.createCollection(
 // Verify that we can't collMod the validator to include an encryption-related keyword.
 assert.commandFailedWithCode(db.runCommand({collMod: collName, validator: encryptSchema}),
                              ErrorCodes.QueryFeatureNotAllowed);
+validateCollectionOptions();
 assert.commandFailedWithCode(db.runCommand({collMod: collName, validator: nestedEncryptSchema}),
                              ErrorCodes.QueryFeatureNotAllowed);
+validateCollectionOptions();
 assert.commandFailedWithCode(db.runCommand({collMod: collName, validator: encryptMetadataSchema}),
                              ErrorCodes.QueryFeatureNotAllowed);
+validateCollectionOptions();
 coll.drop();
 
 // Create the collection with an encrypted validator and action 'error'.
@@ -62,11 +88,13 @@ assert.commandWorked(
 // encryption-related keyword.
 assert.commandFailedWithCode(db.runCommand({collMod: collName, validationAction: "warn"}),
                              ErrorCodes.QueryFeatureNotAllowed);
+validateCollectionOptions();
 
 // Verify that we can't collMod the validation level to 'moderate' since the schema contains an
 // encryption-related keyword.
 assert.commandFailedWithCode(db.runCommand({collMod: collName, validationLevel: "moderate"}),
                              ErrorCodes.QueryFeatureNotAllowed);
+validateCollectionOptions();
 coll.drop();
 
 // Create the collection without a document validator.
@@ -77,22 +105,27 @@ assert.commandWorked(db.createCollection(collName));
 assert.commandFailedWithCode(
     db.runCommand({collMod: collName, validator: encryptSchema, validationAction: "warn"}),
     ErrorCodes.QueryFeatureNotAllowed);
+validateCollectionOptions();
 assert.commandFailedWithCode(
     db.runCommand({collMod: collName, validator: nestedEncryptSchema, validationAction: "warn"}),
     ErrorCodes.QueryFeatureNotAllowed);
+validateCollectionOptions();
 assert.commandFailedWithCode(
     db.runCommand({collMod: collName, validator: encryptMetadataSchema, validationAction: "warn"}),
     ErrorCodes.QueryFeatureNotAllowed);
+validateCollectionOptions();
 
 assert.commandFailedWithCode(
     db.runCommand({collMod: collName, validator: encryptSchema, validationLevel: "moderate"}),
     ErrorCodes.QueryFeatureNotAllowed);
+validateCollectionOptions();
 assert.commandFailedWithCode(
     db.runCommand({collMod: collName, validator: nestedEncryptSchema, validationLevel: "moderate"}),
     ErrorCodes.QueryFeatureNotAllowed);
+validateCollectionOptions();
 assert.commandFailedWithCode(
     db.runCommand(
         {collMod: collName, validator: encryptMetadataSchema, validationLevel: "moderate"}),
     ErrorCodes.QueryFeatureNotAllowed);
-coll.drop();
+validateCollectionOptions();
 })();
